message template token inlccluded

--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -246,6 +246,10 @@
           <a href="{{ reset_url }}" class="reset-button">Reset My Password</a>
         </div>
 
+        <div class="button-section">
+          <a href="{{ token }}" class="reset-button">Reset My Password</a>
+        </div>
+
         <div class="url-section">
           <div class="url-label">Or copy and paste this link:</div>
           <div class="url-text">{{ reset_url }}</div>
